# SocketMap

./: .gitignore  BUILDING.md  Cargo.toml  Cross.toml  LICENCE.md  Makefile  README.md
sockets_map/: Cargo.toml
sockets_map/res/: csv_help.md  linux_help.md  summary_help.md  unknown_remote_help.md  windows_help.md
sockets_map/src/: connections_model.rs  csv.rs  graphs.rs  graphviz.rs  help.rs  host.rs  lib.rs  parsers.rs  server.rs
sockets_map/src/parsers/: csv.rs  directory_scanner.rs  linux.rs  nmap.rs  windows.rs
sockets_map/src/parsers/linux/: file_parser.rs
sockets_map/src/parsers/windows/: file_parser.rs
sockets_map/src/server/: client.rs  message.rs
sockets_map_agent/: Cargo.toml
sockets_map_agent/src/: args.rs  main.rs
sockets_map_cli/: Cargo.toml
sockets_map_cli/src/: cli_args.rs  help.rs  main.rs
sockets_map_gui/: Cargo.toml
sockets_map_gui/res/: help.md  sockets_map.desktop
sockets_map_gui/src/: main.rs  ui.rs
sockets_map_gui/src/ui/: app_msgs.rs  files.rs  graph_options.rs  help.rs  server.rs
sockets_map_gui/src/ui/files/: cheatsheet.rs
sockets_map_gui/src/ui/server/: client.rs
