[package]
name = "sockets_map"
version = "1.0.0"
authors = ["LazyTanuki"]
edition = "2021"

[dependencies]
tempfile = "3.3.0"
log = "0.4.16"
regex = "1.5.5"
utf16_reader = "0.1.0"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
sha1 = "0.10.1"
hex = "0.4.3"
tabbycat = { version = "0.1.2", features = ["attributes"] }
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["full"] }
bincode = "1.3.3"
tsyncp = "0.3.0"
chrono = "0.4.22"
anyhow = "1.0.69"
tokio-util = "0.7.7"
