[package]
name = "sockets_map_agent"
authors = ["LazyTanuki"]
version = "1.0.0"
edition = "2021"

[[bin]]
name = "sockets_map_agent"
path = "src/main.rs"

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
remoteprocess = "0.4.10"
bincode = "1.3.3"
tsyncp = "0.3.0"
tokio = "1.20.1"
local-ip-address = "0.4.8"
hostname = "0.3.1"
simplelog = "0.11.2"
log = "0.4.16"
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
which = "4.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
is_sudo = "0.0.1"

[dependencies.sockets_map]
path = "../sockets_map"
