[package]
name = "sockets_map_cli"
version = "1.0.0"
authors = ["LazyTanuki"]
edition = "2021"

[[bin]]
name = "sockets_map"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.8", features = ["derive", "cargo"] }
simplelog = "0.11.2"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
mdcat = "0.26.1"
syntect = "4.6.0"
pulldown-cmark = "0.9.1"
minus = { version = "5.0.1", features = ["static_output"] }
tokio = "1.20.1"
tokio-util = "0.7.7"

[dependencies.sockets_map]
path = "../sockets_map"
